Update plugin; WP All Import - WooCommerce Add-On Pro

--- a/wp-content/plugins/wpai-woocommerce-add-on/static/css/admin.css
+++ b/wp-content/plugins/wpai-woocommerce-add-on/static/css/admin.css
@@ -20,9 +20,12 @@
 	width: 50px !important;
 }
 .wpallimport-plugin .options_group{
-	padding-bottom: 10px;
 	padding-top: 10px;
+	padding-bottom: 10px;
 	/*overflow: hidden;*/
+}
+.wpallimport-plugin .options_group .order-notes .input {
+	padding-left: 0;
 }
 .wpallimport-plugin .options_group .input{
 	padding-left: 8px;
@@ -71,21 +74,26 @@
 	overflow: hidden;
 	margin: 5px 0;
 }
+.wpallimport-plugin .switcher-target-order_refund_issued_by_cf.set_with_xpath label {
+	line-height: 30px;
+	margin-left: 5px !important; /* Override the !important directive */
+}
 .wpallimport-plugin .in_variations select, .wpallimport-plugin .is_visible select, .wpallimport-plugin .is_taxonomy select{
 	float:none !important;
 }
 .wpallimport-plugin .in_variations, .wpallimport-plugin .is_visible, .wpallimport-plugin .is_taxonomy{
 	display: block;
 	float: left;
-	margin: 5px 0 0 5px;
+	margin: 5px 20px 10px 0;
+	
 }
 .wpallimport-plugin .is_create_taxonomy {
 	display: block;
 	float: left;
-	margin: 5px 0 15px 5px;
+	margin: 5px 0 20px 0;
 }
 .wpallimport-plugin .in_variations label, .wpallimport-plugin .is_visible label, .wpallimport-plugin .is_taxonomy label{
-	width: 80px;
+	width: auto;
 }
 .wpallimport-plugin .is_create_taxonomy label{
 	width: 115px;
@@ -111,7 +119,7 @@
 	width: 75% !important;
 }
 .wpallimport-plugin .variations_tree{
-	font-family: sans-serif;
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 	/*position: absolute;
 	width:100%;
 	top:-155px;*/
@@ -136,8 +144,8 @@
 	margin-top: 0px;		
 }
 	.wpallimport-plugin .variations_tag .title {
-		font-weight: bold;
-		padding: 6px 8px;
+		font-weight: 600;
+		padding: 10px 16px;
 		color: #464646;
 		background: #fff;
 		font-size: 12px;
@@ -198,13 +206,19 @@
   	}
 }
 .wpallimport-plugin .use_parent{
-	display: inline-block;	
+	display: inline-block;
 	position: relative;
+}
+
+.wpallimport-plugin .use_parent.align {
+	display: inline-flex;
+	align-items: center;
+	margin-top: 3px;
 }
 
 .wpallimport-plugin table.custom-params label{
 	font-size: 12px;
-	left: 3px;
+	left: 5px;
 	margin-left: 0 !important;
 	padding-left: 0 !important;
 	position: relative;
@@ -283,6 +297,21 @@
 .wpallimport-plugin #variable_product_options img{
 	margin: 10px 0;
 }
+
+.wpallimport-plugin #variable_sale_price_shedule {
+	text-transform: capitalize;
+	width: 100%;
+	display: block;
+	text-align: right;
+	margin-top: 15px;
+	margin-right: 20px;
+	padding-top: 10px;
+}
+
+.wpallimport-plugin #cancel_variable_regular_price_shedule {
+	text-transform: capitalize;
+}
+
 .wpallimport-plugin .highlight{
 	background: none repeat scroll 0 0 #CAD2DF;
 	padding: 5px;
@@ -308,7 +337,14 @@
 }
 .wpallimport-plugin #woocommerce-product-data .form-field,
 .wpallimport-plugin .woocommerce-order-data .form-field{
+	margin-top: 10px;
 	padding-left: 20px;
+	border-collapse: separate;
+	border-spacing: 10px;
+}
+.wpallimport-plugin .woocommerce-order-data .form-field table {
+	border-collapse: separate;
+	border-spacing: 10px;
 }
 .wpallimport-plugin .pmwi_percentage_prices_note,
 .wpallimport-plugin .pmwi_reduce_prices_note{
@@ -317,38 +353,92 @@
 .wpallimport-plugin .pmwi_adjust_prices{
 	display: none;
 }
+.wpallimport-plugin .wpallimport-template select.pmwi_adjust_type {
+	padding: 2px 25px 2px 6px;
+	margin-left: 6px;
+}
 .wpallimport-plugin .pmwi_trigger_adjust_prices{
 	cursor: pointer;
 	width: 330px;
 }
-.wpallimport-plugin .advanced_attributes{
+
+.wpallimport-plugin .pmwi_trigger_adjust_prices > strong > span.expanded:before,
+.wpallimport-plugin .pmwi_trigger_adjust_prices > strong > span:before,
+.wpallimport-plugin a.switcher > span {
+	content: '';
 	display: inline-block;
+	background: url('../img/caret.png') no-repeat;
+	    background-position-x: 0%;
+	    background-position-y: 0%;
+	    background-size: auto;
+	background-size: contain;
+	width: 14px;
+	height: 12px;
+	color: transparent;
+	background-size: auto;
+	background-position: 1px -1px;
+	transform: scaleY(-1);
+	margin-right: 2px;
+}
+
+.wpallimport-plugin .pmwi_trigger_adjust_prices > strong > span.expanded:before,
+.wpallimport-plugin a.switcher > span.expanded {
+	background-position: 1px 1px;
+	transform: scaleY(1);
+}
+
+.wpallimport-plugin .advanced_attributes{
+	display: block;
 	float: left;
 	width: 16px;
 	height: 16px;
-	margin: 6px 3px 0px 3px;	
-}
-.wpallimport-plugin .advanced_attributes{ 	
+	margin: 0;
+	padding-top: 0;
+	padding-bottom: 10px;
+	position: relative;
+	left: 0;
+	text-align: right;
 	font-size: 12px;
 	width:100%;
 	height:25px;	
 	color:#21759B;
-	/*font-family: "Open Sans",​sans-serif;*/
 	padding-top: 2px;
-	text-decoration: underline;	
-	/*margin: 0 auto;	*/
+	text-decoration: underline;
+	text-align: left;
 }
 .wpallimport-plugin .advanced_attributes span{
 	font-size: 16px;
 	position: relative;
 	top: 1px;
 }
+
+.wpallimport-plugin .advanced_attributes:before,
+.wpallimport-plugin .advanced_attributes.expanded:before {
+	content: '';
+	display: inline-block;
+	background: url('../img/caret.png') no-repeat;
+	    background-position-x: 0%;
+	    background-position-y: 0%;
+	    background-size: auto;
+	background-size: contain;
+	width: 14px;
+	height: 12px;
+	color: transparent;
+	background-size: auto;
+	background-position: 1px -1px;
+	transform: scaleY(-1);
+	margin-right: 4px;
+}
+
+.wpallimport-plugin .advanced_attributes.expanded:before {
+	transform: scaleY(1);
+	background-position: 1px 1px;
+}
+
 .wpallimport-plugin .advanced_attribute_settings{
 	clear: both;
 	display: none;
-	margin-bottom: 10px;
-	padding-bottom: 5px;
-	border-bottom: 1px solid #e5e5e5;
+	margin-bottom: 30px;
 }
 .wpallimport-plugin .advanced_attribute_settings div.input{
 	clear: both;
@@ -386,15 +476,11 @@
 }*/
 .wpallimport-plugin .wpallimport-order-billing-fields{
 	width: 98%;
+	border-collapse: separate;
+	border-spacing: 10px;
 }
 .wpallimport-plugin .wpallimport-order-billing-fields input[type="text"]{
 	width: 100% !important;
-}
-.wpallimport-plugin a.add-new-line{
-	position: relative;
-	top:-10px;
-	background: rgba(0, 0, 0, 0) url("../img/add.png") no-repeat scroll 0 3px;
-	padding-left: 15px;
 }
 /*.wpallimport-plugin .woocommerce-order-data a.add-new-line::before{
 	content: "+ ";
@@ -502,6 +588,7 @@ div#order_taxes.panel.woocommerce_options_panel {
 	background: url("../img/drag.png") top right no-repeat;
 	cursor: pointer;
 	padding-left: 25px;
+	margin-left: -25px;
 	background-position: 0 10px;
 }
 #attributes_table .ui-sortable-placeholder,
@@ -509,6 +596,105 @@ div#order_taxes.panel.woocommerce_options_panel {
 	border: 1px dashed #ccc;
 	visibility: visible !important;
 	height: 100px;
+}
+#variable_product_options .options_group.variation_attributes {
+	overflow: initial;
+}
+#attributes_table thead tr td,
+#variable_product_options #variation_attributes_table thead tr td {
+	padding-bottom: 5px;
+}
+#variable_product_options #variation_attributes_table .wpallimport-radio-field {
+	padding: 10px 0 1px 0 !important;
+}
+#variable_product_options #variation_attributes_table .other-attributes {
+	margin-left: -65px;
+}
+
+#attributes_table .add-new-custom,
+#variable_product_options #variation_attributes_table .add-new-custom {
+	margin-top: -5px;
+}
+
+
+#variation_attributes_table .ui-sortable .form-field td:nth-child(2) .wpallimport-radio-field {
+	/* !important required to overwrite previous !important modifiers */
+	padding: 0 20px 0 0 !important;
+}
+
+#shipping_product_data input[name="single_product_width"],
+#shipping_product_data input[name="single_product_height"] {
+	margin-top: 10px;
+}
+
+#shipping_product_data .form-field.dimensions-field {
+	margin-top: 20px;
+	margin-bottom: 5px;
+}
+
+#shipping_product_data .dimensions-field,
+#shipping_product_data .weight-field {
+	display: flex;
+	flex-direction: row;
+}
+
+#shipping_product_data .dimensions-field > label,
+#shipping_product_data .weight-field > label {
+	float: none;
+	flex: 1;
+}
+
+#shipping_product_data .dimensions-field > div,
+#shipping_product_data .weight-field > div {
+	display: flex;
+	flex-direction: column;
+	flex: 2;
+}
+
+#shipping_product_data .dimensions-field > div > input,
+#shipping_product_data .weight-field > div > input {
+	width: 60%;
+}
+
+#shipping_product_data .switcher-target-multiple_product_shipping_class_yes {
+	margin-left: 24px;
+}
+
+.wpallimport-plugin .ui-datepicker-trigger {
+	position: relative;
+	top: -2px;
+	right: 30px;
+}
+
+.wpallimport-plugin .form-table td label[for=convert_decimal_separator],
+.wpallimport-plugin .form-table td label[for=disable_prepare_price],
+.wpallimport-plugin .form-table td label[for=prepare_price_to_woo_format] {
+	/* Override other !important declarations */
+	margin-right: 2px !important;
+}
+
+.wpallimport-plugin #linked_product_data .wpallimport-help {
+	top: 4px;
+}
+
+.wpallimport-plugin #general_product_data .ui-datepicker-trigger {
+	top: -1px;
+	right: 28px;
+}
+
+.wpallimport-plugin #cancel_regular_price_shedule {
+	margin-left: -15px;
+	text-transform: capitalize;
+}
+
+.wpallimport-plugin #regular_price_shedule {
+	margin-left: 5px;
+	text-transform: capitalize;
+}
+
+.wpallimport-plugin .woocommerce-order-data .form-field.add-product-meta {
+	padding-left: 0 !important;
+	border-spacing: 0 !important;
 }
 
 /****************/
@@ -550,4 +736,76 @@ div#order_taxes.panel.woocommerce_options_panel {
 }
 .wpallimport-plugin .subscription-expiration {
 	margin-bottom: 10px;
+}
+
+.wpallimport-plugin #order_refunds label {
+	width: auto;
+	margin-right: 15px !important;
+}
+
+.wpallimport-plugin #order_refunds .date {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: 98%;
+}
+
+.wpallimport-plugin .wpallimport-radio-field label[for="products_source_new"] {
+	width: 80%;
+}
+
+
+/*****************/
+/* Media Queries */
+/*****************/
+
+@media screen and (min-width: 1340px) {
+	.wpallimport-plugin .advanced_attributes{
+		position: absolute;
+		width: auto;
+		left: initial;
+		right: 0;
+	}
+
+	.wpallimport-plugin .in_variations, .wpallimport-plugin .is_visible, .wpallimport-plugin .is_taxonomy{
+		margin: 5px 30px 30px 0;
+	}
+}
+
+@media screen and (min-width: 1190px) {
+	.wpallimport-plugin .wpallimport-radio-field label[for="products_source_new"] {
+		width: auto;
+	}
+}
+
+@media screen and (max-width: 1280px) {
+	.wpallimport-plugin #variable_product_options .switcher-target-auto_matching_parent .form-field label,
+	.wpallimport-plugin #variable_product_options .switcher-target-auto_matching_parent_first_is_parent_id .form-field label,
+	.wpallimport-plugin #variable_product_options .switcher-target-auto_matching_parent_first_is_variation .form-field label {
+		width: auto !important;
+	}
+	.wpallimport-plugin #variable_product_options .switcher-target-auto_matching_parent .form-field input,
+	.wpallimport-plugin #variable_product_options .switcher-target-auto_matching_parent_first_is_parent_id .form-field input,
+	.wpallimport-plugin #variable_product_options .switcher-target-auto_matching_parent_first_is_variation .form-field input {
+		width: 100% !important;
+	}
+
+	.wpallimport-plugin #variable_product_options .wpallimport-radio-field {
+		margin-bottom: 15px;
+	}
+
+	.wpallimport-plugin #variable_product_options .wpallimport-radio-field > input[type="radio"] {
+		display: inline-block;
+		margin-right: 3px;
+		float: none !important;
+	}
+
+	.wpallimport-plugin #variable_product_options .wpallimport-radio-field > label {
+		float: none;
+		display: inline;
+	}
+
+	.wpallimport-plugin #variable_product_options img {
+		max-width: 100%;
+	}
 }
