Added heading font, Adobe Typekit : Proxima Nova

--- a/wp-content/themes/decimaltenths/src/scss/global/_variables.scss
+++ b/wp-content/themes/decimaltenths/src/scss/global/_variables.scss
@@ -7,11 +7,14 @@ $global-width: 1340px;
 // Font family
 $brand-font: "Titillium Web";
 
+$heading-font: "proxima-nova";
+
 // Font weights
 $regular: 400;
 $medium: 500;
 $semi-bold: 600;
 // $bold: 700;
+$xtra-bold: 800;
 
 // Global padding/margin
 $small-spacing: rem-calc(10px);
