--- a/wp-content/themes/decimaltenths/src/scss/critical.scss
+++ b/wp-content/themes/decimaltenths/src/scss/critical.scss
@@ -15,7 +15,7 @@
 @import "global/typography";
 
 // Components
-// @import "components/navigation";
+@import "components/navigation";
 
 // Modules
-// @import "modules/header";
+@import "modules/header";
