Moved site logo to part, added logo image. Added svg icons for the toggle offCanvas. Styles for the menu text

--- a/wp-content/themes/decimaltenths/src/scss/critical.scss
+++ b/wp-content/themes/decimaltenths/src/scss/critical.scss
@@ -10,7 +10,7 @@
 @import "global/extends";
 
 // Global
-// @import "global/helpers";
+@import "global/helpers";
 // @import "global/fonts";
 @import "global/typography";
 
