--- a/wp-content/themes/decimaltenths/src/scss/components/_navigation.scss
+++ b/wp-content/themes/decimaltenths/src/scss/components/_navigation.scss
@@ -20,22 +20,26 @@ $offMenuWidth: 100vw;
 
 .menu-button-trigger {
 	padding: 0;
-	width: 50px;
-	height: 50px;
-	color: var(--brand-mid-blue);
-	font-size: rem-calc(13px);
+	width: 45px;
+	height: 45px;
+	font-size: rem-calc(11px);
 	text-transform: uppercase;
 	letter-spacing: 0.01em;
 	border: 0;
 	cursor: pointer;
-	background-color: transparent;
+	background-color: var(--grey-30);
+	border-radius: 3px;
 
 	&:hover,
 	&:focus {
-		background-color: var(--grey-30);
+		background-color: var(--grey-50);
 	}
 
-	.svg {
+	.svg--bars {
+		max-width: 18px;
+	}
+
+	.svg--xmark {
 		max-width: 16px;
 	}
 
@@ -68,7 +72,7 @@ $offMenuWidth: 100vw;
 		width: $offMenuWidth;
 		min-height: 100vh;
 		transition: all 0.3s ease-in-out;
-		padding: rem-calc(115px 15px 15px);
+		padding: rem-calc(50px 15px 15px);
 		transform: translate3d(-$offMenuWidth, 0, 0);
 		background-color: transparent;
 		z-index: 0;
@@ -114,7 +118,10 @@ $offMenuWidth: 100vw;
 	.menu-item {
 		display: block;
 		padding: $small-spacing;
-		font-size: rem-calc(15px);
+		font-size: rem-calc(16px);
+		text-transform: uppercase;
+		font-weight: $semi-bold;
+		letter-spacing: 0.01em;
 
 		@include breakpoint(large) {
 			display: inline-block;
@@ -155,7 +162,8 @@ $offMenuWidth: 100vw;
 		position: relative;
 
 		.sub-menu-toggle[aria-expanded="false"] {
-			background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 448 512'%3E%3Cpath fill='%2355a5e2' d='M224 416c-8.188 0-16.38-3.125-22.62-9.375l-192-192c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0L224 338.8l169.4-169.4c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25l-192 192C240.4 412.9 232.2 416 224 416z'/%3E%3C/svg%3E");
+			background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 448 512'%3E%3Cpath fill='%2343B143' d='M4.251 181.1C7.392 177.7 11.69 175.1 16 175.1c3.891 0 7.781 1.406 10.86 4.25l197.1 181.1l197.1-181.1c6.5-6 16.64-5.625 22.61 .9062c6 6.5 5.594 16.59-.8906 22.59l-208 192c-6.156 5.688-15.56 5.688-21.72 0l-208-192C-1.343 197.7-1.749 187.6 4.251 181.1z'/%3E%3C/svg%3E");
+			background-size: 15px auto;
 			background-position: 10px center;
 
 			+ .sub-menu {
@@ -164,8 +172,7 @@ $offMenuWidth: 100vw;
 		}
 
 		.sub-menu-toggle[aria-expanded="true"] {
-			background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 448 512'%3E%3Cpath fill='%2355a5e2' d='M416 352c-8.188 0-16.38-3.125-22.62-9.375L224 173.3l-169.4 169.4c-12.5 12.5-32.75 12.5-45.25 0s-12.5-32.75 0-45.25l192-192c12.5-12.5 32.75-12.5 45.25 0l192 192c12.5 12.5 12.5 32.75 0 45.25C432.4 348.9 424.2 352 416 352z'/%3E%3C/svg%3E");
-			background-position: 10px center;
+			background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 448 512'%3E%3Cpath fill='%2343B143' d='M443.8 330.8C440.6 334.3 436.3 336 432 336c-3.891 0-7.781-1.406-10.86-4.25L224 149.8l-197.1 181.1c-6.5 6-16.64 5.625-22.61-.9062c-6-6.5-5.594-16.59 .8906-22.59l208-192c6.156-5.688 15.56-5.688 21.72 0l208 192C449.3 314.3 449.8 324.3 443.8 330.8z'/%3E%3C/svg%3E");
 
 			+ .sub-menu {
 				display: block;
@@ -180,7 +187,7 @@ $offMenuWidth: 100vw;
 		display: inline-block;
 		vertical-align: middle;
 		width: 40px;
-		height: 20px;
+		height: 40px;
 		background-color: transparent;
 		border: 0;
 		cursor: pointer;
