--- a/wp-content/themes/decimaltenths/src/scss/modules/_header.scss
+++ b/wp-content/themes/decimaltenths/src/scss/modules/_header.scss
@@ -40,10 +40,17 @@
 		outline: 1px dashed green;
 
 		.menu-item {
-			display: inline-block;
+			display: block;
 			margin-bottom: 0;
 			padding: $small-spacing;
-			font-size: rem-calc(15px);
+			font-size: rem-calc(16px);
+			text-transform: uppercase;
+			font-weight: $semi-bold;
+			letter-spacing: 0.01em;
+
+			@include breakpoint(large) {
+				display: inline-block;
+			}
 
 			a {
 				display: block;
