--- a/wp-content/themes/decimaltenths/src/scss/components/_navigation.scss
+++ b/wp-content/themes/decimaltenths/src/scss/components/_navigation.scss
@@ -10,8 +10,8 @@ $offMenuWidth: 100vw;
 // Menu trigger to open/close off-canvas
 .menu-button-container {
 	position: absolute;
-	top: 24px;
-	right: calc(-100% + 20px);
+	top: 10px;
+	right: calc(-100% + 10px);
 
 	@include breakpoint(large) {
 		display: none;
@@ -88,9 +88,11 @@ $offMenuWidth: 100vw;
 // when opened, class applied to the body
 .primary-navigation-open {
 	.header--inner {
+		background-color: black;
+
 		@include breakpoint(medium down) {
-			color: var(--brand-light-blue);
-			background-color: var(--brand-dark-blue);
+			// color: var(--brand-light-blue);
+			// background-color: var(--brand-dark-blue);
 			transform: translate3d(0, 0, 0);
 			z-index: 99;
 			overflow-y: scroll;
@@ -98,11 +100,7 @@ $offMenuWidth: 100vw;
 	}
 
 	.menu-button-container {
-		right: 20px;
-	}
-
-	.menu-button-trigger {
-		color: var(--brand-light-blue);
+		right: 10px;
 	}
 }
 
@@ -118,13 +116,17 @@ $offMenuWidth: 100vw;
 	.menu-item {
 		display: block;
 		padding: $small-spacing;
+		color: white;
+		font-weight: $semi-bold;
 		font-size: rem-calc(16px);
 		text-transform: uppercase;
-		font-weight: $semi-bold;
 		letter-spacing: 0.01em;
 
 		@include breakpoint(large) {
 			display: inline-block;
+			padding: 0;
+			padding-left: $small-spacing;
+			padding-right: $large-spacing;
 		}
 
 		&:last-of-type {
