--- a/wp-content/themes/decimaltenths/src/scss/global/_helpers.scss
+++ b/wp-content/themes/decimaltenths/src/scss/global/_helpers.scss
@@ -26,3 +26,27 @@
 		padding: $small-spacing;
 	}
 }
+
+body {
+	background-color: red;
+
+	@include breakpoint(medium) {
+		background-color: orange;
+	}
+
+	@include breakpoint(large) {
+		background-color: yellow;
+	}
+
+	@include breakpoint(xlarge) {
+		background-color: blue;
+	}
+
+	@include breakpoint(xxlarge) {
+		background-color: green;
+	}
+
+	@include breakpoint(xxxlarge) {
+		background-color: purple;
+	}
+}
