--- a/wp-content/themes/decimaltenths/src/scss/app.scss
+++ b/wp-content/themes/decimaltenths/src/scss/app.scss
@@ -4,12 +4,12 @@
 @import "foundation/util/util";
 
 // Global
-// @import "global/variables";
-// @import "global/extends";
+@import "global/variables";
+@import "global/extends";
 // @import "global/shared-helpers";
 
 // Grid
-// @import "global/flex-grid";
+@import "global/flex-grid";
 // @import "global/flex-classes";
 
 // Components
@@ -21,5 +21,5 @@
 // @import "components/search-form";
 
 // Modules
-// @import "modules/footer";
+@import "modules/footer";
 // @import "modules/block-newsletter";
