--- a/wp-content/themes/decimaltenths/src/scss/global/_shared-helpers.scss
+++ b/wp-content/themes/decimaltenths/src/scss/global/_shared-helpers.scss
@@ -25,3 +25,15 @@
 .justify-content-space-between {
 	justify-content: space-between;
 }
+
+// .text-align-left {
+// 	text-align: left;
+// }
+
+// .text-align-right {
+// 	text-align: right;
+// }
+
+// .text-align-center {
+// 	text-align: center;
+// }
